--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <title>${ title } • Voilà</title>
     <script src="/modernizr.js"></script>
-    <link rel="stylesheet" href="/h5bp.css">
-    <link rel="stylesheet" href="/components.css">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <div id="content" class="container">
