--- a/styles.less
+++ b/styles.less
@@ -1,5 +1,5 @@
 @import "node_modules/bootstrap/less/bootstrap.less";
-@import (less) "assets/highlight-github.css";
+@import (less) "assets/highlight-docco.css";
 
 a.smartlink {
   &.smartlink--offline {
